err/joker-nightly.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/APScheduler-3.5.0.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/apscheduler'...
Listing './lib/python3.5/site-packages/apscheduler/executors'...
Listing './lib/python3.5/site-packages/apscheduler/jobstores'...
Listing './lib/python3.5/site-packages/apscheduler/schedulers'...
Listing './lib/python3.5/site-packages/apscheduler/triggers'...
Listing './lib/python3.5/site-packages/apscheduler/triggers/cron'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fakeredis-0.9.0.dist-info'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/joker'...
Listing './lib/python3.5/site-packages/joker/broker'...
Listing './lib/python3.5/site-packages/joker/broker/interfaces'...
Listing './lib/python3.5/site-packages/joker/cast'...
Listing './lib/python3.5/site-packages/joker/cast/iterative'...
Listing './lib/python3.5/site-packages/joker/cast/nested'...
Listing './lib/python3.5/site-packages/joker/nightly'...
Listing './lib/python3.5/site-packages/joker-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/joker_broker-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/joker_cast-0.0.19.egg-info'...
Listing './lib/python3.5/site-packages/joker_nightly-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/tzlocal'...
Listing './lib/python3.5/site-packages/tzlocal/test_data'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc/conf.d'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var/db'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc/sysconfig'...
Listing './lib/python3.5/site-packages/tzlocal-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
